# NMEA-handler

./: .gitignore  Dockerfile  LICENSE  README.md  Untitled
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml
app/static/: index.html  register_service  widget.html
docs/: USB_PORT_MAPPING_COMPARISON.md
