[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airmar-wx"
version = "0.1.0"
description = "BlueOS extension for Airmar WX-series WeatherStations (200WX, 300WX, etc.) over NMEA 0183"
authors = [
    {name = "Tony White", email = "tony.white@bluerobotics.com"}
]
dependencies = [
    "pyserial>=3.5",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["app"]

